[workspace]
members = [
  "rust/common-builder",
  "rust/common-javascript-interpreter",
  "rust/common-graph",
  "rust/common-ifc",
  "rust/common-integration-tests",
  "rust/common-macros",
  "rust/common-protos",
  "rust/common-runtime",
  "rust/common-test-fixtures",
  "rust/common-tools",
  "rust/common-tracing",
  "rust/common-wit",
]

# See: https://github.com/rust-lang/rust/issues/90148#issuecomment-949194352
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1" }
async-stream = { version = "0.3" }
async-trait = { version = "0.1" }
axum = { version = "0.7" }
blake3 = { version = "1.5" }
boa_engine = { version = "0.19" }
boa_gc = { version = "0.19" }
boa_runtime = { version = "0.19" }
bytes = { version = "1" }
clap = { version = "4.5" }
common-builder = { path = "./rust/common-builder" }
common-graph = { path = "./rust/common-graph" }
common-ifc = { path = "./rust/common-ifc" }
common-integration-tests = { path = "./rust/common-integration-tests" }
common-javascript-interpreter = { path = "./rust/common-javasript-interpreter" }
common-macros = { path = "./rust/common-macros" }
common-protos = { path = "./rust/common-protos", default-features = false }
common-runtime = { path = "./rust/common-runtime" }
common-test-fixtures = { path = "./rust/common-test-fixtures" }
common-tracing = { path = "./rust/common-tracing" }
common-wit = { path = "./rust/common-wit" }
criterion = { version = "0.5" }
darling = { version = "0.20" }
deno_emit = { version = "0.45" }
deno_graph = { version = "0.82" } # Keep aligned with `deno_emit`'s version
getrandom = { version = "0.2", features = ["js"] }
http = { version = "1.1" }
http-body-util = { version = "0.1" }
hyper-util = { version = "0.1", features = ["client", "client-legacy"] }
js-component-bindgen = { version = "1", features = ["transpile-bindgen"] }
js-sys = { version = "0.3" }
lazy_static = { version = "1" }
mime_guess = { version = "2" }
once_cell = { version = "1" }
prost = { version = "0.13" }
quote = { version = "1" }
rand = { version = "0.8" }
redb = { version = "2" }
reqwest = { version = "0.12", default-features = false }
rust-embed = { version = "8.4" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sieve-cache = { version = "0.2" }
strum = { version = "0.26" }
syn = { version = "2" }
tempfile = { version = "3" }
thiserror = { version = "1" }
tonic = { version = "0.12", default-features = false }
tonic-build = { version = "0.12", default-features = false, features = [
  "prost",
] }
tonic-web = { version = "0.12" }
tonic-web-wasm-client = { version = "0.6" }
tokio = { version = "1" }
tower-http = { version = "0.5" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "tracing-log",
  "json",
] }
tracing-web = { version = "0.1" }
url = { version = "2" }
# Minimum required wasm-bindgen / wasm-bindgen-test versions
# SEE: https://github.com/rustwasm/wasm-bindgen/issues/4083
# NOTE: Version of wasm-bindgen must be kept in sync with the
# version of wasm-bindgen-cli that is installed globally e.g.,
# by flake.nix.
wasm-bindgen = { version = "0.2.93" }
wasm-bindgen-futures = { version = "0.4.43" }
wasm-bindgen-test = { version = "0.3.43" }
wasmtime = { version = "25" }
wasmtime-wasi = { version = "25" }
wasmtime-wasi-http = { version = "25" }
wasmtime-environ = { version = "25" }
web-sys = { version = "0.3" }
wit-bindgen = { version = "0.33" }
wit-bindgen-rt = { version = "0.33" }
wit-parser = { version = "0.218" }

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true
