[workspace]
members = [
#  "rust/common-javascript-interpreter",
#  "rust/common-formula-javascript-interpreter",
#  "rust/common-graph",
#  "rust/common-ifc",
#  "rust/common-integration-tests",
#  "rust/common-runtime",
#  "rust/common-tools",
#  "rust/common-wit",
  "rust/ct-builder",
  "rust/ct-common",
  "rust/ct-engine",
  "rust/ct-js-vm",
  "rust/ct-macros",
  "rust/ct-protos",
  "rust/ct-runtime",
  "rust/ct-storage",
  "rust/ct-test-fixtures",
  "rust/ct-tracing",
  "rust/ranked-prolly-tree",
]

# See: https://github.com/rust-lang/rust/issues/90148#issuecomment-949194352
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1" }
async-stream = { version = "0.3" }
async-trait = { version = "0.1" }
axum = { version = "0.7" }
blake3 = { version = "1.5" }
boa_engine = { version = "0.19" }
boa_gc = { version = "0.19" }
boa_runtime = { version = "0.19" }
bytes = { version = "1" }
clap = { version = "4.5" }
ct-builder = { path = "./rust/ct-builder" }
ct-common = { path = "./rust/ct-common" }
ct-macros = { path = "./rust/ct-macros" }
ct-protos = { path = "./rust/ct-protos" }
ct-runtime = { path = "./rust/ct-runtime" }
ct-storage = { path = "./rust/ct-storage" }
ct-test-fixtures = { path = "./rust/ct-test-fixtures" }
ct-tracing = { path = "./rust/ct-tracing" }
ranked-prolly-tree = { path = "./rust/ranked-prolly-tree" }
criterion = { version = "0.5" }
darling = { version = "0.20" }
deno_emit = { version = "0.46" }
deno_graph = { version = "0.82.3" } # Keep aligned with `deno_emit`'s version
futures-core = { version = "0.3" }
futures-util = { version = "0.3" }
getrandom = { version = "0.2", features = ["js"] }
#http = { version = "1.1" }
#http-body-util = { version = "0.1" }
#hyper-util = { version = "0.1", features = ["client", "client-legacy"] }
#js-component-bindgen = { version = "1", features = ["transpile-bindgen"] }
js-sys = { version = "0.3" }
#lazy_static = { version = "1" }
#mime_guess = { version = "2" }
once_cell = { version = "1" }
prost = { version = "0.13" }
quote = { version = "1" }
rand = { version = "0.8" }
redb = { version = "2" }
reqwest = { version = "0.12", default-features = false }
rexie = { version = "0.6" }
#rust-embed = { version = "8.4" }
#serde = { version = "1", features = ["derive"] }
#serde_json = { version = "1" }
#sieve-cache = { version = "0.2" }
#strum = { version = "0.26" }
syn = { version = "2" }
tempfile = { version = "3" }
thiserror = { version = "2" }
tonic = { version = "0.12", default-features = false }
tonic-build = { version = "0.12", default-features = false, features = [
  "prost",
] }
#tonic-web = { version = "0.12" }
#tonic-web-wasm-client = { version = "0.6" }
tokio = { version = "1" }
tower-http = { version = "0.5" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "tracing-log",
  "json",
] }
tracing-web = { version = "0.1" }
url = { version = "2" }

# Minimum required wasm-bindgen / wasm-bindgen-test versions
# SEE: https://github.com/rustwasm/wasm-bindgen/issues/4083
# NOTE: Version of wasm-bindgen must be kept in sync with the
# version of wasm-bindgen-cli that is installed globally e.g.,
# by flake.nix.
wasm-bindgen = { version = "0.2.99" }
wasm-bindgen-futures = { version = "0.4.49" }
wasm-bindgen-test = { version = "0.3.49" }
wasmtime = { version = "27" }
#wasmtime-wasi = { version = "25" }
#wasmtime-wasi-http = { version = "25" }
#wasmtime-environ = { version = "25" }
web-sys = { version = "0.3" }
#wit-bindgen = { version = "0.33" }
wit-bindgen-rt = { version = "0.33" }
#wit-parser = { version = "0.218" }

[profile.release]
opt-level = "s"
debug = false
strip = true
lto = true
