[package]
name = "common-builder"
description = "A Common server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["multipart", "macros"] }
blake3 = { workspace = true }
bytes = { workspace = true }
common-bundler = { workspace = true }
common-tracing = { workspace = true }
mime_guess = { workspace = true }
redb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "io-util", "process", "fs"] }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
wit-parser = { workspace = true }

[dev-dependencies]
common-test-fixtures = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
