[package]
name = "common-builder"
description = "A Common server"
version = "0.1.0"
edition = "2021"
publish = false

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
common-protos = { workspace = true, features = ["builder"] }
common-tracing = { workspace = true }
common-wit = { workspace = true }
deno_emit = { workspace = true }
deno_graph = { workspace = true }
mime_guess = { workspace = true }
redb = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["rustls-tls", "charset", "http2", "macos-system-configuration"] }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "io-util", "process", "fs"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
wit-parser = { workspace = true }

[dev-dependencies]
common-test-fixtures = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
tracing-subscriber = { workspace = true }
