[package]
name = "common-ifc"
description = "Information flow control for Common runtime."
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
common-macros = { workspace = true }
common-protos = { workspace = true }
common-tracing = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

