[package]
name = "common-ifc"
description = "Information flow control for Common runtime."
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
common-macros = { workspace = true }
common-protos = { workspace = true }
common-tracing = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
default = []
render = []
