[package]
name = "common-ifc"
description = "Information flow control for Common runtime."
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
common-graph = { workspace = true }
common-macros = { workspace = true }
common-protos = { workspace = true }
common-tracing = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
common-ifc = { workspace = true, features = ["render"] }

[features]
default = []
render = ["common-graph/render"]