[package]
name = "common-protos"
description = "A Common server"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["runtime", "builder"]
runtime = []
builder = []

[dependencies]
prost = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tonic = { workspace = true, features = ["codegen", "prost", "transport"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tonic = { workspace = true, default-features = false, features = ["codegen", "prost"] }

[build-dependencies]
tonic-build = { workspace = true, default-features = false, features = ["prost", "transport"] }
