[package]
name = "common-runtime"
description = "A Common runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
common-bindings = { workspace = true }
common-protos = { workspace = true, features = ["runtime", "builder"] }
common-tracing = { workspace = true }
common-wit = { workspace = true }
http = { workspace = true }
mime_guess = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sieve-cache = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "io-util", "process", "fs"] }
tonic = { workspace = true, features = ["codegen", "prost", "transport"] }
tower-http = { workspace = true, features = ["cors"] }
wasmtime = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"]}
tokio = { workspace = true, features = ["rt"] }
tonic = { workspace = true, features = ["codegen", "prost"] }

[build-dependencies]
tempfile = { workspace = true }

[dev-dependencies]
common-builder = { workspace = true }
common-test-fixtures = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }

[[bench]]
name = "runtime_bench"
harness = false
required-features = ["bench"]
