[package]
name = "common-runtime"
description = "A Common runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
axum = { workspace = true, features = ["multipart", "macros"] }
blake3 = { workspace = true }
bytes = { workspace = true }
common-protos = { workspace = true, features = ["runtime"] }
common-tracing = { workspace = true }
common-wit = { workspace = true }
http = { workspace = true }
hyper-util = { workspace = true }
mime_guess = { workspace = true }
rand = { workspace = true }
redb = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sieve-cache = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "io-util", "process", "fs"] }
tonic = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }
wit-parser = { workspace = true }

[build-dependencies]
tempfile = { workspace = true }

[dev-dependencies]
common-builder = { workspace = true }
common-test-fixtures = { workspace = true }
criterion = { workspace = true, features = ["async_tokio"] }

[[bench]]
name = "runtime_bench"
harness = false
