[package]
name = "common-runtime"
description = "A Common runtime"
version = "0.1.0"
edition = "2021"

[features]
helpers = ["common-builder"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
common-ifc = { workspace = true }
common-macros = { workspace = true }
common-protos = { workspace = true, features = ["runtime", "builder"] }
common-tracing = { workspace = true }
common-wit = { workspace = true }
http = { workspace = true }
mime_guess = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sieve-cache = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { workspace = true, features = ["derive"] }
common-builder = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt-multi-thread", "rt", "io-util", "process", "fs", "macros"] }
tonic = { workspace = true, features = ["codegen", "prost", "transport"] }
tonic-web = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"]}
tokio = { workspace = true, features = ["rt"] }
tonic = { workspace = true, default-features = false, features = ["codegen", "prost"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
wasm-bindgen = { workspace = true }
tonic-web-wasm-client = { workspace = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = { workspace = true }

[build-dependencies]
tempfile = { workspace = true }

[dev-dependencies]
common-builder = { workspace = true }
common-test-fixtures = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }

[[bench]]
name = "runtime_bench"
harness = false
