[package]
name = "common-tracing"
description = "Shared utilities for common crates."
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
common-macros = { workspace = true, features = ["tracing"] }
tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
tracing-wasm = "~0.2"