[package]
name = "ct-macros"
description = "Macros for common crates."
version = "0.1.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
blake3 = { workspace = true }
darling = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }

[features]
tracing = []