[package]
name = "ct-protos"
description = "Protobuf bindings"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["builder"]
builder = []

[dependencies]
ct-common = { workspace = true }
prost = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tonic = { workspace = true, features = ["codegen", "prost", "transport"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tonic = { workspace = true, default-features = false, features = ["codegen", "prost"] }

[build-dependencies]
tonic-build = { workspace = true, default-features = false, features = ["prost", "transport"] }
