[package]
name = "ct-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
futures-core = { workspace = true }
ranked-prolly-tree = { workspace = true, features = ["basic-encoder"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
nonempty = { version = "0.10" }