[package]
name = "ct-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
futures-core = { workspace = true }
ranked-prolly-tree = { workspace = true, features = ["basic-encoder"] }
thiserror = { workspace = true }
nonempty = { version = "0.10" }

[dev-dependencies]
futures-util = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "rt",
    "io-util",
    "process",
    "fs",
    "macros",
] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = { workspace = true }
tokio = { workspace = true } # for tokio::pin!
