[package]
name = "ct-test-fixtures"
description = "Static server hosting ESM modules for testing."
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["process", "fs", "macros"] }
tower-http = { workspace = true, features = ["fs"] }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
reqwest = { workspace = true }
