[package]
name = "ranked-prolly-tree"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
bincode = { version = "1.3.3", optional = true }
blake3 = { workspace = true }
ct-common = { workspace = true }
nonempty = { version = "0.10", features = ["serialize"] }
thiserror = { workspace = true }
serde = { version = "1", features = ["derive"] }
tracing = { workspace = true }
lru = { version = "0.12", optional = true }
tokio = { workspace = true, features = ["sync"] }
async-stream = { workspace = true }
futures-core = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["fs"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rexie = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }

[dev-dependencies]
futures-util = { workspace = true }
ranked-prolly-tree = { workspace = true, features = ["bincode", "helpers"] }
ct-tracing = { workspace = true }
rand = { workspace = true }
web-time = { version = "1.1.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "rt",
    "io-util",
    "process",
    "fs",
    "macros",
] }
criterion = { workspace = true, features = ["async_tokio"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = { workspace = true }
getrandom = { workspace = true, features = ["js"] }

[features]
default = ["bincode", "lru"]
bincode = ["dep:bincode"]
lru = ["dep:lru"]
helpers = []
render = []

[[bench]]
name = "tree"
harness = false

[[bench]]
name = "rank"
harness = false